--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-validator": "^0.14.1",
     "joi": "^17.12.3",
     "mongoose": "^8.3.2",
+    "nestjs-command": "^3.1.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
